feat: add admin user management component with user role management and deletion functionality
feat: implement information form component for creating and editing information pages

feat: create information list admin component to display and manage information pages

feat: add diagnostic stress questionnaire component for stress evaluation

feat: implement login and registration components for user authentication

feat: add stress configuration component for managing stress events

feat: create auth service for handling user authentication and authorization

feat: implement stress service for managing stress events and calculating scores

--- a/front-cesizen/src/app/layout/main-layout/main-layout.component.html
+++ b/front-cesizen/src/app/layout/main-layout/main-layout.component.html
@@ -1,6 +1,29 @@
 <nav class="navbar">
   <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Accueil</a>
-  <a routerLink="/informations/stress" routerLinkActive="active">Exemple page</a>
+  <a routerLink="/diagnostic-stress" routerLinkActive="active">Diagnostic</a>
+  @if(auth.isAdmin()){
+    <a routerLink="/admin/informations" routerLinkActive="active">Admin Infos</a>
+    <a routerLink="/admin/stress-config" routerLinkActive="active">Config Diagnostic</a>
+  }
+
+
+ <span style="margin-left:auto;">
+  @if (auth.isLoggedIn()) {
+    <span>
+      Connecté en tant que {{ auth.getUser()?.email }} |
+      <a href="#" (click)="logout()">Déconnexion</a> |
+      <a routerLink="/account">Gestion du compte</a>
+    </span>
+    <nav>
+
+</nav>
+
+
+  } @else {
+    <a routerLink="/login" routerLinkActive="active">Connexion</a> |
+    <a routerLink="/register" routerLinkActive="active">Inscription</a>  }
+</span>
+
 </nav>
 
 <hr />
