--- a/front-cesizen/src/app/pages/information-detail/information-detail.component.html
+++ b/front-cesizen/src/app/pages/information-detail/information-detail.component.html
@@ -1,2 +1,8 @@
-<h1>{{ info.title }}</h1>
-<div [innerHTML]="info.content"></div>
+@if(info){
+<ng-container>
+  <h1>{{ info.title }}</h1>
+  <p>{{ info.content }}</p>
+</ng-container>
+}
+
+<div [innerHTML]="info!.content"></div>
