feat: update diagnostic stress component styles and fix information detail display

--- a/front-cesizen/src/app/pages/information-detail/information-detail.component.html
+++ b/front-cesizen/src/app/pages/information-detail/information-detail.component.html
@@ -1,7 +1,7 @@
 @if(info){
 <ng-container>
   <h1>{{ info.title }}</h1>
-  <p>{{ info.content }}</p>
+  <p>{{ info.slug }}</p>
 </ng-container>
 }
 
