--- a/front-cesizen/src/app/pages/login/login.component.html
+++ b/front-cesizen/src/app/pages/login/login.component.html
@@ -1,9 +1,41 @@
-<h1>Connexion</h1>
+<div class="login-container">
+  <div class="login-card">
+    <h1>Connexion</h1>
 
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <label>Email : <input formControlName="email" /></label>
-  <label>Mot de passe : <input type="password" formControlName="password" /></label>
-  <button type="submit">Se connecter</button>
-</form>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="login-form">
+      <div class="form-group">
+        <label for="email">Email :</label>
+        <input
+          id="email"
+          type="email"
+          formControlName="email"
+          placeholder="votre@email.com"
+          autocomplete="email"
+        />
+      </div>
 
-<p *ngIf="error" style="color: red;">{{ error }}</p>
+      <div class="form-group">
+        <label for="password">Mot de passe :</label>
+        <input
+          id="password"
+          type="password"
+          formControlName="password"
+          placeholder="••••••••"
+          autocomplete="current-password"
+        />
+      </div>
+
+      <button
+        type="submit"
+        class="login-btn"
+        [disabled]="form.invalid"
+      >
+        Se connecter
+      </button>
+    </form>
+
+    <div *ngIf="error" class="error-message">
+      {{ error }}
+    </div>
+  </div>
+</div>
